Changes to author tags

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ rtl                      : # true, false (default) # turns direction of the page
 title                    : "Seasoned Insights: A Fresh Journey into Data Science"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Your Name"
+name                     : "Stephen Garcia"
 description              : "An amazing website."
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
@@ -113,10 +113,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Stephen Garcia"
   avatar           : "/assets/images/srg.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
+  bio              : "Motivated Data Engineer with expertise in data analysis, machine learning, and visualization. Seeking to leverage skills in statistical analysis and predictive modeling to solve business problems, enhance efficiency, and drive data-driven decision-making in a dynamic team."
+  location         : "San Antonio, TX"
   email            :
   links:
     - label: "Email"
