--- a/_config.yml
+++ b/_config.yml
@@ -324,12 +324,12 @@ defaults:
       share: true
       related: true
 
-  # _posts
+  # _pages
   - scope:
       path: ""
       type: pages
     values:
       layout: single
-      author_profile: true
+      author_profile: false
 
 
